fix dark mode

--- a/app/javascript/homeland/index.scss
+++ b/app/javascript/homeland/index.scss
@@ -44,6 +44,7 @@
 
 input[type="file"]::-webkit-file-upload-button {
   color: var(--primary);
+  background: var(--btn-default-background-color);
   -webkit-appearance: none !important;
   border: 0;
   outline: none;
@@ -51,7 +52,6 @@ input[type="file"]::-webkit-file-upload-button {
   padding: 0;
   padding-right: 10px;
 }
-
 textarea,
 #preview {
   &::-webkit-scrollbar {
